// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroImage snapshots > matches snapshot: Default 1`] = `
<div>
  <div
    class="w-full max-w-2xl"
  >
    <div
      class="relative w-full overflow-hidden rounded-lg"
      style="aspect-ratio: 1.7777777777777777 / 1;"
    >
      <img
        alt="Mountain landscape at sunset"
        class="absolute inset-0 size-full object-cover"
        src="https://images.unsplash.com/photo-1588345921523-c2dcdb7f1dcd?w=1200&dpr=2&q=80"
      />
      <div
        aria-hidden="true"
        class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/10 to-transparent"
      />
      <div
        class="absolute inset-0 flex flex-col justify-end gap-2 p-6 text-white"
      >
        <h1
          class="text-2xl font-semibold"
        >
          Explore the highlands
        </h1>
        <p
          class="text-sm text-white/80"
        >
          Guided tours starting every weekend this summer.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroImage snapshots > matches snapshot: SquareRatio 1`] = `
<div>
  <div
    class="w-full max-w-2xl"
  >
    <div
      class="relative w-full overflow-hidden rounded-lg"
      style="aspect-ratio: 1 / 1;"
    >
      <img
        alt="Mountain landscape at sunset"
        class="absolute inset-0 size-full object-cover"
        src="https://images.unsplash.com/photo-1588345921523-c2dcdb7f1dcd?w=1200&dpr=2&q=80"
      />
      <div
        aria-hidden="true"
        class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/10 to-transparent"
      />
      <div
        class="absolute inset-0 flex flex-col justify-end gap-2 p-6 text-white"
      >
        <h1
          class="text-xl font-semibold"
        >
          Explore the highlands
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroImage snapshots > matches snapshot: WithoutContent 1`] = `
<div>
  <div
    class="w-full max-w-2xl"
  >
    <div
      class="relative w-full overflow-hidden rounded-lg"
      style="aspect-ratio: 1.7777777777777777 / 1;"
    >
      <img
        alt="Mountain landscape at sunset"
        class="absolute inset-0 size-full object-cover"
        src="https://images.unsplash.com/photo-1588345921523-c2dcdb7f1dcd?w=1200&dpr=2&q=80"
      />
      <div
        aria-hidden="true"
        class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/10 to-transparent"
      />
    </div>
  </div>
</div>
`;

exports[`HeroImage snapshots > matches snapshot: WithoutOverlay 1`] = `
<div>
  <div
    class="w-full max-w-2xl"
  >
    <div
      class="relative w-full overflow-hidden rounded-lg"
      style="aspect-ratio: 1.7777777777777777 / 1;"
    >
      <img
        alt="Mountain landscape at sunset"
        class="absolute inset-0 size-full object-cover"
        src="https://images.unsplash.com/photo-1588345921523-c2dcdb7f1dcd?w=1200&dpr=2&q=80"
      />
      <div
        class="absolute inset-0 flex flex-col justify-end gap-2 p-6 text-white"
      >
        <h1
          class="rounded bg-black/60 px-2 py-1 text-lg font-semibold"
        >
          Explore the highlands
        </h1>
      </div>
    </div>
  </div>
</div>
`;
